// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut renders Donut.Slice children 1`] = `
<svg
  className=""
  height={30}
  width={30}
>
  <g
    transform="translate(15,15)"
  >
    <path
      d="M9.18485099360515e-16,-15A15,15,0,1,1,9.18485099360515e-16,15L5.51091059616309e-16,9A9,9,0,1,0,5.51091059616309e-16,-9Z"
      data-value={1}
      fill="#28a745"
    />
    <path
      d="M9.18485099360515e-16,15A15,15,0,1,1,-2.7554552980815444e-15,-15L-1.6532731788489267e-15,-9A9,9,0,1,0,5.51091059616309e-16,9Z"
      data-value={1}
      fill="#d73a49"
    />
  </g>
</svg>
`;

exports[`Donut renders a single Donut.Slice child 1`] = `
<svg
  className=""
  height={30}
  width={30}
>
  <g
    transform="translate(15,15)"
  >
    <path
      d="M9.18485099360515e-16,-15A15,15,0,1,1,-9.18485099360515e-16,15A15,15,0,1,1,9.18485099360515e-16,-15M-1.6532731788489267e-15,-9A9,9,0,1,0,1.6532731788489267e-15,9A9,9,0,1,0,-1.6532731788489267e-15,-9Z"
      data-value={1}
      fill="#28a745"
    />
  </g>
</svg>
`;

exports[`Donut renders the data prop 1`] = `
<svg
  className=""
  height={30}
  width={30}
>
  <g
    transform="translate(15,15)"
  >
    <path
      d="M9.18485099360515e-16,-15A15,15,0,1,1,-9.18485099360515e-16,15A15,15,0,1,1,9.18485099360515e-16,-15M-1.6532731788489267e-15,-9A9,9,0,1,0,1.6532731788489267e-15,9A9,9,0,1,0,-1.6532731788489267e-15,-9Z"
      data-value={1}
      fill="#d73a49"
    />
  </g>
</svg>
`;
